--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "fwd2txt.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./bin/www"
+    "start": "node fwd2txt.js"
   },
   "repository": {
     "type": "git",
