--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/yanhackcode15/IVR_key2text/issues"
   },
-  "homepage": "https://github.com/yanhackcode15/IVR_key2text#readme"
+  "homepage": "https://github.com/yanhackcode15/IVR_key2text#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "twilio": "^3.51.0"
+  }
 }
